--- a/list.html
+++ b/list.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/satisfy.css">
     <link rel="stylesheet" href="./css/navbar.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/table.css">
 
     <script src="http://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
@@ -45,21 +46,11 @@
         <!-- /.container-fluid -->
     </nav>
 
-    <section class="text-center" id="keys">
-        <div class="container-fluid">
-            <div id="key">
-                <p>Z</p>
-            </div>
-            <div id="js">
-                <h2><i class="fab fa-js-square"></i>&#09;42</h2>
-            </div>
-            <div id="hid">
-                <h2><i class="fab fa-usb"></i>&#09;0x42</h2>
-            </div>
-        </div>
+    <section id="tab" class="text-center">
+
     </section>
 
-    <footer class="bg-dark">
+    <footer class="bg-dark" style="position: relative!important;">
         <div class="container-fluid">
             <div class="row">
                 <div>
@@ -82,7 +73,7 @@
         </div>
     </footer>
 
-    <script src="./js/keyboardDisplay.js"></script>
-    <script src="./js/keys.js"></script>
+    <script src="./js/keyboardTab.js"></script>
+    <script src="./js/table.js"></script>
 </body>
 </html>
