--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<!--<link rel="icon" type="image/png" href="./media/#" />-->
+
+    <meta name="description" content="A simple tool to get the JavaScript event keycode and HID code." lang="en">
+    <meta name="keywords" content="HID, hid keys, datsite, Vincent, Le Quec, vincent, le quec" lang="en">
+    <meta name="author" content="Vincent Le Quec">
+    <meta name="google-site-verification" content="OJ9nKUnc0w-HdzCkPSO5qdQj713VDZLiCO1wSXBzEFI" />
     <title>HidKeys</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -11,7 +17,7 @@
     <link rel="stylesheet" href="./css/navbar.css">
     <link rel="stylesheet" href="./css/style.css">
 
-    <script src="http://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 <body id="top" class="bg-light">
@@ -48,13 +54,13 @@
     <section class="text-center" id="keys">
         <div class="container-fluid">
             <div id="key">
-                <p>Z</p>
+                <p>Press any key</p>
             </div>
             <div id="js">
-                <h2><i class="fab fa-js-square"></i>&#09;42</h2>
+                <h2><i class="fab fa-js-square"></i>&#09;00</h2>
             </div>
             <div id="hid">
-                <h2><i class="fab fa-usb"></i>&#09;0x42</h2>
+                <h2><i class="fab fa-usb"></i>&#09;0x00</h2>
             </div>
         </div>
     </section>
